--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro"
 const {frontmatter} = Astro.props
 ---
 <BaseLayout pageTitle={frontmatter.title} >
-    <h5>Tags: {frontmatter.tags.map(tag => <a href="#">{tag} </a>)}</h5>
+    <h5>Tags: {frontmatter.tags.map(tag => <a href={`../tags/${tag}`}>{tag} </a>)}</h5>
     <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by {frontmatter.author}</p>
